<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wdf_poster_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_profile_placeholder"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wdf_name_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wdf_poster_iv"
        tools:text="Biceps and Leg day" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/wdf_middle_vgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/wdf_calories_label_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"

        android:drawablePadding="5dp"
        android:text="@string/burned_calories_label_string"
        app:drawableStartCompat="@drawable/ic_baseline_whatshot_16"
        app:layout_constraintEnd_toEndOf="@id/wdf_duration_label_tv"
        app:layout_constraintStart_toStartOf="@id/wdf_duration_label_tv"
        app:layout_constraintTop_toBottomOf="@id/wdf_name_tv" />

    <TextView
        android:id="@+id/wdf_duration_label_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawablePadding="5dp"
        android:text="@string/workout_duration_label_string"
        app:drawableStartCompat="@drawable/ic_baseline_access_time_16"
        app:layout_constraintEnd_toEndOf="@id/wdf_middle_vgl"
        app:layout_constraintTop_toBottomOf="@id/wdf_calories_label_tv" />

    <TextView
        android:id="@+id/wdf_date_label_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:text="@string/workout_date_label_string"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_16"
        app:layout_constraintEnd_toEndOf="@id/wdf_duration_label_tv"
        app:layout_constraintStart_toStartOf="@id/wdf_duration_label_tv"
        app:layout_constraintTop_toBottomOf="@id/wdf_duration_label_tv" />

    <TextView
        android:id="@+id/wdf_calories_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_baseline_whatshot_16"
        app:layout_constraintEnd_toEndOf="@id/wdf_date_tv"
        app:layout_constraintStart_toStartOf="@id/wdf_date_tv"
        app:layout_constraintTop_toTopOf="@id/wdf_calories_label_tv"
        tools:text="over 9000" />

    <TextView
        android:id="@+id/wdf_duration_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_baseline_access_time_16"
        app:layout_constraintEnd_toEndOf="@id/wdf_date_tv"
        app:layout_constraintStart_toStartOf="@id/wdf_date_tv"
        app:layout_constraintTop_toTopOf="@id/wdf_duration_label_tv"
        tools:text="1h 30min" />

    <TextView
        android:id="@+id/wdf_date_tv"
        style="@style/defaultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_baseline_calendar_today_16"
        app:layout_constraintStart_toStartOf="@id/wdf_middle_vgl"
        app:layout_constraintTop_toTopOf="@id/wdf_date_label_tv"
        tools:text="2020-11-09 18:00" />

    <ProgressBar
        android:id="@+id/wdf_loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/wdf_delete_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wdf_date_tv" />

    <ImageView
        android:id="@+id/wdf_delete_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_delete_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>